--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <title>Welcome</title>
+    <title>Simulasi Jual Beli Saham</title>
 </head>
 
 <body>
