--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
                                 readonly>
                         </div>
                     </div>
+                    <div class="form-row d-flex justify-content-center">
+                        <div class="col-md-9 col-9">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="form-row d-flex justify-content-center">
+                        <div class="col-md-9 col-9 mt-4 ">
+                            <label class="alert alert-danger">
+                                Disclaimer On : program ini dibuat untuk kebutuhan pembuat sendiri, tidak bertanggung
+                                jawab apabila terjadi perbedaan perhitungan dengan sekuritas yang anda gunakan.
+                            </label>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
