--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <div class="form-row d-flex justify-content-center">
                         <div class="col-md-3 col-9 mt-4">
                             <label class="d-flex justify-content-end">Harga Per Lembar</label>
-                            <input type="text" class="form-control" id="harga" autocomplete="off">
+                            <input type="tel" class="form-control" id="harga" autocomplete="off">
                         </div>
                         <div class="col-md-3 col-9 mt-4">
                             <label class="d-flex justify-content-end">Jumlah Lot</label>
-                            <input type="text" class="form-control" id="lot" autocomplete="off">
+                            <input type="tel" class="form-control" id="lot" autocomplete="off">
                         </div>
                         <div class="col-md-3 col-9 mt-4">
                             <label class="float-right">Kondisi</label><br>
