fix penghitungan jual

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="form-row d-flex justify-content-center">
                         <div class="col-md-6 offset-md-3 col-9 mt-4">
-                            <label class="d-flex justify-content-end">Total Keseluruhan</label>
+                            <label class="d-flex justify-content-end labelTotal">Total</label>
                             <input type="text" id="total" class="form-control font-weight-bolder" value="Rp. 0"
                                 readonly>
                         </div>
