--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-tour-standalone.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap4-toggle.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -102,6 +103,7 @@
     <script src="bootstrap/js/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="bootstrap/js/bootstrap4-toggle.min.js"></script>
+    <script src="bootstrap/js/bootstrap-tour-standalone.js"></script>
     <script src="script.js"></script>
     <!-- <script src="enkripsi.js"></script> -->
 </body>
